src/main/java/invenio/op/parser/GraphQueryParser.java
// $ANTLR 3.4 GraphQueryParser.g 2011-10-23 13:09:11
 package invenio.op.parser; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class GraphQueryParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AS", "ASSIGN", "BOOLEAN_LITERAL", "BY", "COMMA", "DIGIT", "DISTINCT", "DOT", "FALSE", "FLOAT", "FROM_TYPE_ATTRIBUTE", "FROM_TYPE_EDGE", "FROM_TYPE_ELEMENT", "FROM_TYPE_GRAPH", "FROM_TYPE_NODE", "INTEGER", "IS_EQUAL", "LEFT_BRACE", "LEFT_PAREN", "LETTER", "LOWER", "NAME", "NEWLINE", "NULL_LITERAL", "ON", "RIGHT_BRACE", "RIGHT_PAREN", "SIGN", "SPACE", "STAR", "STATEMENT_TERMINATOR", "STRING_LITERAL", "SYMBOL", "S_FROM", "S_GROUP_BY", "S_HAVING", "S_JOIN", "S_MERGE_BY", "S_ORDER_BY", "S_SELECT", "S_SPLIT_BY", "S_TAB_READER", "S_WHERE", "TRUE", "TYPE", "UPPER", "WHITESPACE", "ARGUMENT_LIST", "BASE_SELECT", "CLAUSE", "CLAUSE_ARGUMENTS", "CONTEXT_PARAMS", "CONTEXT_PROP", "C_FROM", "C_GROUP_BY", "C_HAVING", "C_MERGE_BY", "C_ORDER_BY", "C_SELECT", "C_SPLIT_BY", "C_TAB_READER", "C_WHERE", "FUNCTION", "JOIN_SELECT", "P_FROM_TYPE_ATTRIBUTE", "P_FROM_TYPE_EDGE", "P_FROM_TYPE_ELEMENT", "P_FROM_TYPE_GRAPH", "P_FROM_TYPE_NODE"
    };

    public static final int EOF=-1;
    public static final int AS=4;
    public static final int ASSIGN=5;
    public static final int BOOLEAN_LITERAL=6;
    public static final int BY=7;
    public static final int COMMA=8;
    public static final int DIGIT=9;
    public static final int DISTINCT=10;
    public static final int DOT=11;
    public static final int FALSE=12;
    public static final int FLOAT=13;
    public static final int FROM_TYPE_ATTRIBUTE=14;
    public static final int FROM_TYPE_EDGE=15;
    public static final int FROM_TYPE_ELEMENT=16;
    public static final int FROM_TYPE_GRAPH=17;
    public static final int FROM_TYPE_NODE=18;
    public static final int INTEGER=19;
    public static final int IS_EQUAL=20;
    public static final int LEFT_BRACE=21;
    public static final int LEFT_PAREN=22;
    public static final int LETTER=23;
    public static final int LOWER=24;
    public static final int NAME=25;
    public static final int NEWLINE=26;
    public static final int NULL_LITERAL=27;
    public static final int ON=28;
    public static final int RIGHT_BRACE=29;
    public static final int RIGHT_PAREN=30;
    public static final int SIGN=31;
    public static final int SPACE=32;
    public static final int STAR=33;
    public static final int STATEMENT_TERMINATOR=34;
    public static final int STRING_LITERAL=35;
    public static final int SYMBOL=36;
    public static final int S_FROM=37;
    public static final int S_GROUP_BY=38;
    public static final int S_HAVING=39;
    public static final int S_JOIN=40;
    public static final int S_MERGE_BY=41;
    public static final int S_ORDER_BY=42;
    public static final int S_SELECT=43;
    public static final int S_SPLIT_BY=44;
    public static final int S_TAB_READER=45;
    public static final int S_WHERE=46;
    public static final int TRUE=47;
    public static final int TYPE=48;
    public static final int UPPER=49;
    public static final int WHITESPACE=50;
    public static final int ARGUMENT_LIST=51;
    public static final int BASE_SELECT=52;
    public static final int CLAUSE=53;
    public static final int CLAUSE_ARGUMENTS=54;
    public static final int CONTEXT_PARAMS=55;
    public static final int CONTEXT_PROP=56;
    public static final int C_FROM=57;
    public static final int C_GROUP_BY=58;
    public static final int C_HAVING=59;
    public static final int C_MERGE_BY=60;
    public static final int C_ORDER_BY=61;
    public static final int C_SELECT=62;
    public static final int C_SPLIT_BY=63;
    public static final int C_TAB_READER=64;
    public static final int C_WHERE=65;
    public static final int FUNCTION=66;
    public static final int JOIN_SELECT=67;
    public static final int P_FROM_TYPE_ATTRIBUTE=68;
    public static final int P_FROM_TYPE_EDGE=69;
    public static final int P_FROM_TYPE_ELEMENT=70;
    public static final int P_FROM_TYPE_GRAPH=71;
    public static final int P_FROM_TYPE_NODE=72;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GraphQueryParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GraphQueryParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[61+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return GraphQueryParser.tokenNames; }
    public String getGrammarFileName() { return "GraphQueryParser.g"; }


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "query"
    // GraphQueryParser.g:51:1: query : selectStatement EOF !;
    public final GraphQueryParser.query_return query() throws RecognitionException {
        GraphQueryParser.query_return retval = new GraphQueryParser.query_return();
        retval.start = input.LT(1);

        int query_StartIndex = input.index();

        Object root_0 = null;

        Token EOF2=null;
        GraphQueryParser.selectStatement_return selectStatement1 =null;


        Object EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // GraphQueryParser.g:52:2: ( selectStatement EOF !)
            // GraphQueryParser.g:52:4: selectStatement EOF !
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_selectStatement_in_query201);
            selectStatement1=selectStatement();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, selectStatement1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_query203); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, query_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "query"


    public static class selectStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "selectStatement"
    // GraphQueryParser.g:55:1: selectStatement : ( ( contextParams )? baseSelectStatement STATEMENT_TERMINATOR !| ( contextParams )? joinStatement STATEMENT_TERMINATOR !);
    public final GraphQueryParser.selectStatement_return selectStatement() throws RecognitionException {
        GraphQueryParser.selectStatement_return retval = new GraphQueryParser.selectStatement_return();
        retval.start = input.LT(1);

        int selectStatement_StartIndex = input.index();

        Object root_0 = null;

        Token STATEMENT_TERMINATOR5=null;
        Token STATEMENT_TERMINATOR8=null;
        GraphQueryParser.contextParams_return contextParams3 =null;

        GraphQueryParser.baseSelectStatement_return baseSelectStatement4 =null;

        GraphQueryParser.contextParams_return contextParams6 =null;

        GraphQueryParser.joinStatement_return joinStatement7 =null;


        Object STATEMENT_TERMINATOR5_tree=null;
        Object STATEMENT_TERMINATOR8_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // GraphQueryParser.g:56:2: ( ( contextParams )? baseSelectStatement STATEMENT_TERMINATOR !| ( contextParams )? joinStatement STATEMENT_TERMINATOR !)
            int alt3=2;
            switch ( input.LA(1) ) {
            case LEFT_BRACE:
                {
                int LA3_1 = input.LA(2);

                if ( (synpred2_GraphQueryParser()) ) {
                    alt3=1;
                }
                else if ( (true) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
                }
                break;
            case S_SELECT:
                {
                int LA3_2 = input.LA(2);

                if ( (synpred2_GraphQueryParser()) ) {
                    alt3=1;
                }
                else if ( (true) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }
                }
                break;
            case LEFT_PAREN:
                {
                alt3=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // GraphQueryParser.g:56:4: ( contextParams )? baseSelectStatement STATEMENT_TERMINATOR !
                    {
                    root_0 = (Object)adaptor.nil();


                    // GraphQueryParser.g:56:4: ( contextParams )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==LEFT_BRACE) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // GraphQueryParser.g:56:4: contextParams
                            {
                            pushFollow(FOLLOW_contextParams_in_selectStatement214);
                            contextParams3=contextParams();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, contextParams3.getTree());

                            }
                            break;

                    }


                    pushFollow(FOLLOW_baseSelectStatement_in_selectStatement217);
                    baseSelectStatement4=baseSelectStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, baseSelectStatement4.getTree());

                    STATEMENT_TERMINATOR5=(Token)match(input,STATEMENT_TERMINATOR,FOLLOW_STATEMENT_TERMINATOR_in_selectStatement219); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // GraphQueryParser.g:57:4: ( contextParams )? joinStatement STATEMENT_TERMINATOR !
                    {
                    root_0 = (Object)adaptor.nil();


                    // GraphQueryParser.g:57:4: ( contextParams )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==LEFT_BRACE) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // GraphQueryParser.g:57:4: contextParams
                            {
                            pushFollow(FOLLOW_contextParams_in_selectStatement225);
                            contextParams6=contextParams();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, contextParams6.getTree());

                            }
                            break;

                    }


                    pushFollow(FOLLOW_joinStatement_in_selectStatement228);
                    joinStatement7=joinStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, joinStatement7.getTree());

                    STATEMENT_TERMINATOR8=(Token)match(input,STATEMENT_TERMINATOR,FOLLOW_STATEMENT_TERMINATOR_in_selectStatement230); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, selectStatement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "selectStatement"


    public static class contextParams_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "contextParams"
    // GraphQueryParser.g:60:1: contextParams : LEFT_BRACE contextProperty ( COMMA contextProperty )* RIGHT_BRACE -> ^( CONTEXT_PARAMS ( contextProperty )* ) ;
    public final GraphQueryParser.contextParams_return contextParams() throws RecognitionException {
        GraphQueryParser.contextParams_return retval = new GraphQueryParser.contextParams_return();
        retval.start = input.LT(1);

        int contextParams_StartIndex = input.index();

        Object root_0 = null;

        Token LEFT_BRACE9=null;
        Token COMMA11=null;
        Token RIGHT_BRACE13=null;
        GraphQueryParser.contextProperty_return contextProperty10 =null;

        GraphQueryParser.contextProperty_return contextProperty12 =null;


        Object LEFT_BRACE9_tree=null;
        Object COMMA11_tree=null;
        Object RIGHT_BRACE13_tree=null;
        RewriteRuleTokenStream stream_RIGHT_BRACE=new RewriteRuleTokenStream(adaptor,"token RIGHT_BRACE");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_LEFT_BRACE=new RewriteRuleTokenStream(adaptor,"token LEFT_BRACE");
        RewriteRuleSubtreeStream stream_contextProperty=new RewriteRuleSubtreeStream(adaptor,"rule contextProperty");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // GraphQueryParser.g:61:2: ( LEFT_BRACE contextProperty ( COMMA contextProperty )* RIGHT_BRACE -> ^( CONTEXT_PARAMS ( contextProperty )* ) )
            // GraphQueryParser.g:61:4: LEFT_BRACE contextProperty ( COMMA contextProperty )* RIGHT_BRACE
            {
            LEFT_BRACE9=(Token)match(input,LEFT_BRACE,FOLLOW_LEFT_BRACE_in_contextParams242); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LEFT_BRACE.add(LEFT_BRACE9);


            pushFollow(FOLLOW_contextProperty_in_contextParams244);
            contextProperty10=contextProperty();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_contextProperty.add(contextProperty10.getTree());

            // GraphQueryParser.g:61:31: ( COMMA contextProperty )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // GraphQueryParser.g:61:32: COMMA contextProperty
            	    {
            	    COMMA11=(Token)match(input,COMMA,FOLLOW_COMMA_in_contextParams247); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_COMMA.add(COMMA11);


            	    pushFollow(FOLLOW_contextProperty_in_contextParams249);
            	    contextProperty12=contextProperty();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_contextProperty.add(contextProperty12.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            RIGHT_BRACE13=(Token)match(input,RIGHT_BRACE,FOLLOW_RIGHT_BRACE_in_contextParams253); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RIGHT_BRACE.add(RIGHT_BRACE13);


            // AST REWRITE
            // elements: contextProperty
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:2: -> ^( CONTEXT_PARAMS ( contextProperty )* )
            {
                // GraphQueryParser.g:62:5: ^( CONTEXT_PARAMS ( contextProperty )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CONTEXT_PARAMS, "CONTEXT_PARAMS")
                , root_1);

                // GraphQueryParser.g:62:22: ( contextProperty )*
                while ( stream_contextProperty.hasNext() ) {
                    adaptor.addChild(root_1, stream_contextProperty.nextTree());

                }
                stream_contextProperty.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, contextParams_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "contextParams"


    public static class contextProperty_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "contextProperty"
    // GraphQueryParser.g:65:1: contextProperty : n= NAME ASSIGN val= STRING_LITERAL -> ^( CONTEXT_PROP $n $val) ;
    public final GraphQueryParser.contextProperty_return contextProperty() throws RecognitionException {
        GraphQueryParser.contextProperty_return retval = new GraphQueryParser.contextProperty_return();
        retval.start = input.LT(1);

        int contextProperty_StartIndex = input.index();

        Object root_0 = null;

        Token n=null;
        Token val=null;
        Token ASSIGN14=null;

        Object n_tree=null;
        Object val_tree=null;
        Object ASSIGN14_tree=null;
        RewriteRuleTokenStream stream_NAME=new RewriteRuleTokenStream(adaptor,"token NAME");
        RewriteRuleTokenStream stream_STRING_LITERAL=new RewriteRuleTokenStream(adaptor,"token STRING_LITERAL");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

            // GraphQueryParser.g:66:2: (n= NAME ASSIGN val= STRING_LITERAL -> ^( CONTEXT_PROP $n $val) )
            // GraphQueryParser.g:66:4: n= NAME ASSIGN val= STRING_LITERAL
            {
            n=(Token)match(input,NAME,FOLLOW_NAME_in_contextProperty276); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_NAME.add(n);


            ASSIGN14=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_contextProperty278); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ASSIGN.add(ASSIGN14);


            val=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_contextProperty282); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STRING_LITERAL.add(val);


            // AST REWRITE
            // elements: val, n
            // token labels: val, n
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_val=new RewriteRuleTokenStream(adaptor,"token val",val);
            RewriteRuleTokenStream stream_n=new RewriteRuleTokenStream(adaptor,"token n",n);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 67:2: -> ^( CONTEXT_PROP $n $val)
            {
                // GraphQueryParser.g:67:5: ^( CONTEXT_PROP $n $val)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CONTEXT_PROP, "CONTEXT_PROP")
                , root_1);

                adaptor.addChild(root_1, stream_n.nextNode());

                adaptor.addChild(root_1, stream_val.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, contextProperty_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "contextProperty"


    public static class baseSelectStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "baseSelectStatement"
    // GraphQueryParser.g:71:1: baseSelectStatement : clauseSelect ( ( clauseFrom clauseTabReader ) | ( S_FROM LEFT_PAREN baseSelectStatement RIGHT_PAREN ) | ( S_FROM LEFT_PAREN joinStatement RIGHT_PAREN ) ) ( clauseWhere )? ( clauseMergeBy | clauseSplitBy | clauseGroupBy )? ( clauseHaving )? ( clauseOrderBy )? -> ^( BASE_SELECT ( baseSelectStatement )? ( joinStatement )? ( clauseTabReader )? ( clauseFrom )? ( clauseWhere )? ( clauseGroupBy )? ( clauseMergeBy )? ( clauseSplitBy )? ( clauseHaving )? ( clauseOrderBy )? ( clauseSelect )? ) ;
    public final GraphQueryParser.baseSelectStatement_return baseSelectStatement() throws RecognitionException {
        GraphQueryParser.baseSelectStatement_return retval = new GraphQueryParser.baseSelectStatement_return();
        retval.start = input.LT(1);

        int baseSelectStatement_StartIndex = input.index();

        Object root_0 = null;

        Token S_FROM18=null;
        Token LEFT_PAREN19=null;
        Token RIGHT_PAREN21=null;
        Token S_FROM22=null;
        Token LEFT_PAREN23=null;
        Token RIGHT_PAREN25=null;
        GraphQueryParser.clauseSelect_return clauseSelect15 =null;

        GraphQueryParser.clauseFrom_return clauseFrom16 =null;

        GraphQueryParser.clauseTabReader_return clauseTabReader17 =null;

        GraphQueryParser.baseSelectStatement_return baseSelectStatement20 =null;

        GraphQueryParser.joinStatement_return joinStatement24 =null;

        GraphQueryParser.clauseWhere_return clauseWhere26 =null;

        GraphQueryParser.clauseMergeBy_return clauseMergeBy27 =null;

        GraphQueryParser.clauseSplitBy_return clauseSplitBy28 =null;

        GraphQueryParser.clauseGroupBy_return clauseGroupBy29 =null;

        GraphQueryParser.clauseHaving_return clauseHaving30 =null;

        GraphQueryParser.clauseOrderBy_return clauseOrderBy31 =null;


        Object S_FROM18_tree=null;
        Object LEFT_PAREN19_tree=null;
        Object RIGHT_PAREN21_tree=null;
        Object S_FROM22_tree=null;
        Object LEFT_PAREN23_tree=null;
        Object RIGHT_PAREN25_tree=null;
        RewriteRuleTokenStream stream_S_FROM=new RewriteRuleTokenStream(adaptor,"token S_FROM");
        RewriteRuleTokenStream stream_LEFT_PAREN=new RewriteRuleTokenStream(adaptor,"token LEFT_PAREN");
        RewriteRuleTokenStream stream_RIGHT_PAREN=new RewriteRuleTokenStream(adaptor,"token RIGHT_PAREN");
        RewriteRuleSubtreeStream stream_clauseSelect=new RewriteRuleSubtreeStream(adaptor,"rule clauseSelect");
        RewriteRuleSubtreeStream stream_clauseWhere=new RewriteRuleSubtreeStream(adaptor,"rule clauseWhere");
        RewriteRuleSubtreeStream stream_clauseMergeBy=new RewriteRuleSubtreeStream(adaptor,"rule clauseMergeBy");
        RewriteRuleSubtreeStream stream_clauseTabReader=new RewriteRuleSubtreeStream(adaptor,"rule clauseTabReader");
        RewriteRuleSubtreeStream stream_baseSelectStatement=new RewriteRuleSubtreeStream(adaptor,"rule baseSelectStatement");
        RewriteRuleSubtreeStream stream_clauseHaving=new RewriteRuleSubtreeStream(adaptor,"rule clauseHaving");
        RewriteRuleSubtreeStream stream_joinStatement=new RewriteRuleSubtreeStream(adaptor,"rule joinStatement");
        RewriteRuleSubtreeStream stream_clauseSplitBy=new RewriteRuleSubtreeStream(adaptor,"rule clauseSplitBy");
        RewriteRuleSubtreeStream stream_clauseOrderBy=new RewriteRuleSubtreeStream(adaptor,"rule clauseOrderBy");
        RewriteRuleSubtreeStream stream_clauseFrom=new RewriteRuleSubtreeStream(adaptor,"rule clauseFrom");
        RewriteRuleSubtreeStream stream_clauseGroupBy=new RewriteRuleSubtreeStream(adaptor,"rule clauseGroupBy");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

            // GraphQueryParser.g:72:2: ( clauseSelect ( ( clauseFrom clauseTabReader ) | ( S_FROM LEFT_PAREN baseSelectStatement RIGHT_PAREN ) | ( S_FROM LEFT_PAREN joinStatement RIGHT_PAREN ) ) ( clauseWhere )? ( clauseMergeBy | clauseSplitBy | clauseGroupBy )? ( clauseHaving )? ( clauseOrderBy )? -> ^( BASE_SELECT ( baseSelectStatement )? ( joinStatement )? ( clauseTabReader )? ( clauseFrom )? ( clauseWhere )? ( clauseGroupBy )? ( clauseMergeBy )? ( clauseSplitBy )? ( clauseHaving )? ( clauseOrderBy )? ( clauseSelect )? ) )
            // GraphQueryParser.g:72:4: clauseSelect ( ( clauseFrom clauseTabReader ) | ( S_FROM LEFT_PAREN baseSelectStatement RIGHT_PAREN ) | ( S_FROM LEFT_PAREN joinStatement RIGHT_PAREN ) ) ( clauseWhere )? ( clauseMergeBy | clauseSplitBy | clauseGroupBy )? ( clauseHaving )? ( clauseOrderBy )?
            {
            pushFollow(FOLLOW_clauseSelect_in_baseSelectStatement308);
            clauseSelect15=clauseSelect();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseSelect.add(clauseSelect15.getTree());

            // GraphQueryParser.g:72:17: ( ( clauseFrom clauseTabReader ) | ( S_FROM LEFT_PAREN baseSelectStatement RIGHT_PAREN ) | ( S_FROM LEFT_PAREN joinStatement RIGHT_PAREN ) )
            int alt5=3;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==S_FROM) ) {
                int LA5_1 = input.LA(2);
